<resources>
    <string name="app_name">LAUGERJO</string>

    <string name="register">Registro de Usuarios</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_number_hint">Número de Celular</string>
    <string name="signup_login_hint">¿Ya tienes una cuenta? Ingresar</string>
    <string name="login_signup_hint">¿Quieres registrarte? Registrarse</string>
    <string name="login_identi_hint">Número de identidad</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="Cerrar_ses">Cerrar Sesión</string>
    <string name="log_in">Iniciar Sesión" </string>
    <string name="Forgot">Recuperación De Contraseña" </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="text">Se enviara al correo que escriba a continuación , un metodo para  cambiar la contraseña.</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_CerrarSes">Cerrar Sesión</string>
    <string name="rdplaca">Placa del automovil</string>
    <string name="rdmarca">Marca del automovil</string>
    <string name="rdmodelo">Modelo del automovil</string>
    <string name="rdano">Año del automovil</string>
    <string name="rdpuertas">¿Su vehículo tiene mínimo 4 puertas?</string>
    <string name="rdfechaNa">Fecha de nacimiento del conductor</string>
    <string name="rdcategoriaD">¿Tiene la categoría  B1 en su  licencia de conducción?</string>
    <string name="rdvigeniciaDriver">Fecha de vencimiento de licencia de conducción</string>
    <string name="rdvigenciaTarjetap">Fecha de vencimiento de tarjeta de propiedad</string>
    <string name="rdvigenciaSoat">Fecha de vencimiento del Soat</string>
    <string name="rdantecedentes">¿Tiene usted antecedentes Judiciales?</string>
    <string name="rdvigenciaTecno">Fecha de vencimiento de la revisión Tecnomecanica</string>
    <string name="home_second">Home Second</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="btnDesco">Conectarse</string>
    <string name="btnViaje">Solicitar viaje</string>
    <string name="btnViajeAhora">Solicitar viaje</string>
    <string name="txtOrigen">Origen: </string>
    <string name="txtDestino">Destino: </string>
    <string name="txtTiempoV">Tiempo: </string>
    <string name="txtDistancia">Distancia: </string>
    <string name="txtLookFor">BUSCANDO CONDUCTOR...</string>
    <string name="btnCancel">CANCELAR VIAJE</string>
    <string name="nombreUsuario">Nombre: </string>
    <string name="emailUsuario">Email: </string>
    <string name="origenUsuario">Origen: </string>
    <string name="destinoUsuario">Destino: </string>
    <string name="precioUsuario">Precio: $ </string>
    <string name="nombreConductor">Nombre del conductor: </string>
    <string name="btnIniciarViaje">Iniciar viaje </string>
    <string name="btnFinViaje">Finalizar viaje </string>
    <string name="txtEstado">Estado </string>
    <string name="txtViajeF">VIAJE FINALIZADO</string>
    <string name="txtPrice">Precio:</string>
    <string name="btnCalificationDriver">Calificar Conductor</string>
    <string name="btnCalificationClient">Calificar Cliente</string>
    <string name="txtTiempoL">Tiempo de llegada</string>
    <string name="bntAceptar">Aceptar</string>
    <string name="bntRechazar">Rechazar</string>
    <string name="bntActualizar">ACTUALIZAR PERFIL</string>
    <string name="bntActualizarPer">Editar Perfil</string>
    <string name="txtNombre">Nombre: </string>
    <string name="txtApellido">Apellido: </string>
    <string name="txtCalificacion">Calificación: </string>
    <string name="btnHistory">Historial de viajes</string>
    <string name="nmberD">3192485722</string>
    <string name="nmberC">3192768900</string>
    <string name="txtBrand">Mazda 2</string>
    <string name="txtPlate">CRH029</string>
</resources>
