<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.client.Register"
    android:background="@color/colorPrimary">
    <include layout="@layout/toolbar" ></include>
    <LinearLayout
        style="@style/linearParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

       <!-- <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register"
            />-->


        -


            <EditText
                android:layout_marginTop="30dp"
                style="@style/modifiedEditText"
                android:hint="@string/nombre"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/edtNombre"/>

            <EditText
                style="@style/modifiedEditText"
                android:hint="@string/apellido"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/edtApellido"/>

            <EditText
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:id="@+id/edtCorreo"/>


            <EditText
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:id="@+id/edtContra"/>
        <EditText
            style="@style/modifiedEditText"
            android:hint="@string/login_number_hint"
            android:inputType="number"
            android:maxLines="1"
            android:id="@+id/edtNumero"/>
        <EditText
            style="@style/modifiedEditText"
            android:hint="@string/login_identi_hint"
            android:inputType="number"
            android:maxLines="1"
            android:id="@+id/edtIdenti"/>



        <Button
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Registrar"

            android:id="@+id/btnReg"/>
        <Button
            android:layout_marginTop="5dp"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Siguiente"
            android:id="@+id/btnSig"
            android:enabled="false"
            android:visibility="invisible"/>


        <TextView
            style="@style/parent"
            android:id="@+id/txtlogin"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>