<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.driver.RegisterDriver"
    android:background="@color/colorPrimary">
    <include layout="@layout/toolbar" ></include>

    <LinearLayout
        style="@style/linearParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:elevation="4dp"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="15dp"
            app:shape_arc_position="bottom">
            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"></View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DATOS DEL CONDUCTOR"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/whiteTextColor"
                android:textSize="20sp"
                />



            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_arrow_back"
                android:layout_gravity="left|top"
                app:civ_circle_background_color="@color/colorPrimaryDark"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"/>


        </com.github.florent37.shapeofview.shapes.ArcView>

        <!-- <TextView
             style="@style/headerTextPrimary"
             android:layout_marginTop="@dimen/loginViewsMargin"
             android:text="@string/register"
             />-->


        -


        <EditText
            android:id="@+id/edtPlaca"
            style="@style/modifiedEditText"
            android:layout_marginTop="30dp"
            android:hint="@string/rdplaca"
            android:inputType="text"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtMarca"
            style="@style/modifiedEditText"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/rdmarca"
            android:inputType="text"
            android:maxLines="1" />


        <EditText
            android:id="@+id/edtModelo"
            style="@style/modifiedEditText"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/rdmodelo"
            android:inputType="text"
            android:maxLines="1" />

        <!--<EditText
            android:id="@+id/edtNumerop"
            style="@style/modifiedEditText"
            android:hint="@string/rdpuertas"
            android:inputType="number"
            android:maxLines="1" />-->
        <TextView
            style="@style/viewParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rdpuertas"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"></TextView>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbpSi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/si"></RadioButton>

            <RadioButton
                android:id="@+id/rbpNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no"></RadioButton>
        </RadioGroup>


        <EditText
            android:id="@+id/edtAnio"
            style="@style/modifiedEditText"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/rdano"
            android:inputType="number"
            android:maxLines="1" />


        <EditText
            android:id="@+id/edtConduNaci"
            style="@style/modifiedEditText"
            android:hint="@string/rdfechaNa"
            android:inputType="date"
            android:clickable="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:focusable="false"
            android:maxLines="1" />

        <!--<EditText
            android:id="@+id/edtCategoriaD"
            style="@style/modifiedEditText"
            android:hint="@string/rdcategoriaD"
            android:inputType="text"
            android:maxLines="1" />-->
        <TextView
            style="@style/viewParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rdcategoriaD"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"></TextView>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbcSi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/si"></RadioButton>

            <RadioButton
                android:id="@+id/rbcNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no"></RadioButton>
        </RadioGroup>


        <EditText
            android:id="@+id/edtVigenD"
            style="@style/modifiedEditText"
            android:hint="@string/rdvigeniciaDriver"
            android:inputType="date"
            android:clickable="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:focusable="false"
            android:maxLines="1" />


        <EditText
            android:id="@+id/edtVigenTp"
            style="@style/modifiedEditText"
            android:hint="@string/rdvigenciaTarjetap"
            android:inputType="date"
            android:clickable="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:focusable="false"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtVigenSoat"
            style="@style/modifiedEditText"
            android:hint="@string/rdvigenciaSoat"
            android:inputType="date"
            android:clickable="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:focusable="false"
            android:maxLines="1" />

        <TextView
            style="@style/viewParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rdantecedentes"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"></TextView>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbSi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/si"></RadioButton>

            <RadioButton
                android:id="@+id/rbNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no"></RadioButton>
        </RadioGroup>


        <EditText
            android:id="@+id/edtVigenTecno"
            style="@style/modifiedEditText"
            android:hint="@string/rdvigenciaTecno"
            android:inputType="date"
            android:clickable="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:focusable="false"
            android:maxLines="1" />

        <Button
            android:id="@+id/btnReg"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Registrar" />

        <TextView
            android:id="@+id/txtlogin"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>