<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">
    tools:context=".activities.driver.UpdateProfileDriverActivity">

    <include layout="@layout/toolbar" ></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        >
        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="4dp"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="15dp"
            app:shape_arc_position="bottom">
            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"></View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="EDITAR PERFIL"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/whiteTextColor"
                android:textSize="30sp"
                />



            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_arrow_back"
                android:layout_gravity="left|top"
                app:civ_circle_background_color="@color/colorPrimaryDark"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"/>

        </com.github.florent37.shapeofview.shapes.ArcView>


        <EditText

            style="@style/modifiedEditText"
            android:hint="@string/nombre"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/edtName"/>

        <EditText
            style="@style/modifiedEditText"
            android:hint="@string/apellido"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/edtLastname"/>
        <EditText
            android:id="@+id/edtPlate"
            style="@style/modifiedEditText"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/rdplaca"
            android:inputType="text"
            android:maxLines="1" />
        <EditText
            android:id="@+id/edtBrand"
            style="@style/modifiedEditText"
            android:hint="@string/rdmarca"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="text"
            android:maxLines="1" />
        <EditText
            android:id="@+id/edtModel"
            style="@style/modifiedEditText"
            android:hint="@string/rdmodelo"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="text"
            android:maxLines="1" />
        <EditText
            android:id="@+id/edtYear"
            style="@style/modifiedEditText"
            android:hint="@string/rdano"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="number"
            android:maxLines="1" />



    </LinearLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgViewProfile"
        app:civ_border_width="5dp"
        app:civ_border_color="#F0F0F0"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="120dp"


        android:src="@drawable/profile"/>
    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/loginButton"
        android:text="@string/bntActualizar"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>