<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">
    tools:context=".activities.client.UpdateProfileActivity">
    <include layout="@layout/toolbar" ></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        >
        <ImageView
            android:id="@+id/imgViewProfile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/profile"/>

        <EditText
            android:layout_marginTop="30dp"
            style="@style/modifiedEditText"
            android:hint="@string/nombre"
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/edtName"/>

        <EditText
            style="@style/modifiedEditText"
            android:hint="@string/apellido"
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/edtLastname"/>
    </LinearLayout>
<Button
    android:id="@+id/btnUpdateProfile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/loginButton"
    android:text="@string/bntActualizar"
    android:layout_gravity="bottom"
    android:layout_margin="20dp"
    />
</androidx.coordinatorlayout.widget.CoordinatorLayout>