<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.driver.MapDriverBookingActivity">



    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp"
        />
    <Button
        android:id="@+id/btnStartBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnIniciarViaje"
        style="@style/loginButton"
        android:layout_margin="30dp"/>

    <Button
        android:id="@+id/btnFinishBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnFinViaje"
        android:visibility="gone"
        android:background="@color/black"
        style="@style/loginButton"
        android:layout_margin="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    </LinearLayout>

    <com.github.florent37.shapeofview.shapes.BubbleView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        app:shape_bubble_arrowHeight="15dp"
        app:shape_bubble_arrowWidth="15dp"
        app:shape_bubble_arrowPosition="top"
        app:shape_bubble_borderRadius="20dp"
        android:layout_gravity="bottom"
        >
        <View
          android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgViewClientBooking"
                android:layout_width="80dp"
                app:civ_border_width="3dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                app:civ_border_color="#F0F0F0"
                android:layout_height="80dp"
                android:src="@drawable/profile"></de.hdodenhof.circleimageview.CircleImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtClientBooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:maxLines="1"
                    android:layout_marginTop="5dp"
                    android:text="@string/nombreUsuario"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/txtEmailBooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailUsuario"
                    android:maxLines="1"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/whiteTextColor"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtOriginClientBooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/origenUsuario"
                    android:maxLines="2"

                    android:textColor="@color/whiteTextColor"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/txtDestinationClientBooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destinoUsuario"
                    android:textColor="@color/whiteTextColor"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:maxLines="2"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/txtPriceBooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precioUsuario"
                    android:textColor="@color/whiteTextColor"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>
</com.github.florent37.shapeofview.shapes.BubbleView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>