<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.client.CalificationDriverActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViajeF"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="782-check-mark-success.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtOrigen"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/txtOriginCalification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="cra 28 #47-60"
            android:textAlignment="center"
            android:textSize="17sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDestino"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/txtDestinationCalification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="cra 28 #47-60"
            android:textAlignment="center"
            android:textSize="17sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPrice"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/txtPriceCalification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$10.000"
            android:textAlignment="center"
            android:textSize="17sp"
            android:layout_marginTop="5dp"/>
        <RatingBar
            android:id="@+id/rbCalification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />
    </LinearLayout>
    <Button
        android:id="@+id/btnCalification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/loginButton"
        android:layout_margin="20dp"
        android:text="@string/btnCalificationDriver"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>